rename notebook, some changes

--- a/Notebook/Phase0.0_Introduction.ipynb
+++ b/Notebook/Phase0.0_Introduction.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <div style=\" text-align: center; font-size: 30px\">INTODUCTION TO DATA SCIENCE</div>\n",
-    "# <div style=\" text-align: center; font-size: 30px\">FINAL PROJECT</div>"
+    "# <div style=\" text-align: center; font-size: 30px; font-weight: bold\">INTODUCTION TO DATA SCIENCE</div>\n",
+    "\n",
+    "# <div style=\" text-align: center; font-size: 30px; font-weight: bold\">FINAL PROJECT</div>"
    ]
   },
   {
@@ -16,8 +17,12 @@
     "- 21120275 - Huỳnh Cao Khôi\n",
     "- 21120308 - Phạm Lê Tú Nhi\n",
     "\n",
-    "## I. Topic\n",
-    "Analize the real estate date of Ho Chi Minh City and answer meaningful questions about it.\n"
+    "## **1. Topic**\n",
+    "Analize the real estate date of Ho Chi Minh City and answer meaningful questions about it.\n",
+    "\n",
+    "The real estate market in Viet Nam, especially in Ho Chi Minh City, is always an interest and significant subject. \n",
+    "\n",
+    "In this project"
    ]
   }
  ],
