--- a/Notebook/Phase01.Part01.Collect_selling_data.ipynb
+++ b/Notebook/Phase01.Part01.Collect_selling_data.ipynb
@@ -4,16 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style = \"text_algin: center; font-size: 40px; font-weight: bold\">\n",
-    "Phase 01: Collecting data\n",
-    "</div>"
+    "# <div style=\" text-align: center; font-size: 50px; font-weight: bold\">Phase 01: Collecting data </div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import necessary Python modules"
+    "## **Import necessary Python modules**"
    ]
   },
   {
@@ -33,28 +31,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will collect to type of data: The real estate for sale and the real eastate for rent"
+    "## **Collect real estate for sale data:**\n",
+    "In this section, we will collect the data of real estates that for sale from this website: https://batdongsan.com.vn/ . This webstite contain most of the advertisement of real estate (for rent or sale) in Viet Nam. In the scope of this project. We will focus on the data of real estate for sale, which are located in Ho Chi Minh City.\n",
+    "\n",
+    "Also, with the heavy density of the advertisement in this website. The data is collected is just mainly concentrate in just a period time (just in round end months of 2023). So for a overview, they cannot give us a full view about the current state of real estate in Ho Chi Minh City over times. Anyway, just don't get more concern to it and start our journey to collect data."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 01: Collect real estate for sale data:"
+    "### **1. Some initials:**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Initials:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create an empty dataframe to store the data of the real estate. The dataframe will contain some features like: `Address`, `Type`, `Area`, `Price`, `Bedroom`, `Toilet`, `Floor`, `Furniture`, `Direction`, `Legal`, `Posting date`, `Expiry date`, `Ad type`, `Ad code`."
+    "Look through the website, I can figure out some features that are common for most of real estate. So we can consider them like features that we should collect.\n",
+    "\n",
+    "Now, create an empty dataframe to store the data of the real estate. The dataframe will contain some features like: `Address`, `Type`, `Area`, `Price`, `Bedroom`, `Toilet`, `Floor`, `Furniture`, `Direction`, `Legal`, `Posting date`, `Expiry date`, `Ad type`, `Ad code`."
    ]
   },
   {
@@ -72,17 +68,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Collect the links to each real estate page:\n",
+    "### **2. Collect the links to each real estate webpage:**\n",
     "\n",
-    "In this case, I use `Selenium` to access the website and crawl data from it."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "The links are collected from multiple pages, with each page containing numerous links to apartments. These links have been stored in a file named `real_estate_for_sale_links.txt`.     \n",
-    "The link to the homepage and the file name are provided below:"
+    "\n",
+    "With this task , we can use `Selenium` to access the website and crawl data from it. The link to the homepage and the file name are provided below:"
    ]
   },
   {
@@ -104,16 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def GetTotalPage(url):\n",
     "\n",
+    "    # Create an instance of the driver\n",
     "    driver = webdriver.Chrome()\n",
     "    driver.get(url)\n",
     "    soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
     "\n",
+    "    # The parsing data process\n",
     "    unprocessed_num_page = soup.find(class_ = 're__pagination-group')\n",
     "    driver.quit()\n",
     "\n",
@@ -186,6 +178,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Up to now, we have collected all the links to each real estate website and store them into a text file. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Read the \"real_estate_for_sale_links.txt\" file and store all the links to a lists"
    ]
   },
@@ -205,14 +204,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Access to each link and colllect the data:"
+    "### **3. Access to each link and colllect the data:**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- A dictionary to rename the features collected from the webiste:"
+    "The current language of the website is Vietnamese, and as just for some consitent, I try to convert them all to Englist by the dictionary below:"
    ]
   },
   {
@@ -242,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Another dictionary to get the type of the real estate."
+    "Also, look the through the website, I see that there are so many different types of real estates. This will be a important features for out future analysis. The issue here is the current data of each real estate that not contain its type, and the type is hide by the type code. Fortunaly, I have found all of them and store in the dictionary bellow:"
    ]
   },
   {
@@ -270,6 +269,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now, let's define some necessary function of scrapping process:\n",
+    "\n",
     "- Function to extract the features from a link:"
    ]
   },
@@ -298,26 +299,28 @@
     "            if (item.text):\n",
     "                found = re.findall(regex, item.text)\n",
     "                break;\n",
-    "        \n",
+    "        # If the address cannot be found, mean the data is invalide, ignore them.\n",
     "        if address == None:\n",
     "            return features\n",
     "        else:\n",
     "            features['Address'] = address.text\n",
     "            features['Type'] = sale_type_dict[found[3]]\n",
     "\n",
-    "        # Get all the features\n",
+    "        # Get all the features about the attribute of each real estate\n",
     "        feature_items = soup.find_all('div', class_ = 're__pr-specs-content-item')\n",
     "        for item in feature_items:\n",
     "            title = item.find(class_ = 're__pr-specs-content-item-title').text.strip()\n",
     "            value = item.find(class_ = 're__pr-specs-content-item-value').text.strip()\n",
     "            features[title] = value\n",
     "\n",
+    "        # Get the features about the posting date, expiry date and the ad code\n",
     "        date_items = soup.find_all( 'div', class_ = \"re__pr-short-info-item js__pr-config-item\")\n",
     "        for item in date_items:\n",
     "            title = item.find('span', class_ = 'title').text.strip()\n",
     "            value = item.find('span',class_ = 'value').text.strip()\n",
     "            features[title] = value\n",
     "    \n",
+    "        # Convert all the keys to the defined keys base on the dictionary.\n",
     "        keys_to_change = list(features.keys())\n",
     "        for key in keys_to_change:\n",
     "            if key in key_map:\n",
@@ -356,17 +359,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Note:\n",
-    "Through this process, the executing time of Selenium is quite long. So I came up with using another Libraries to collect the data.\n",
+    "### **Note:**\n",
+    "After many effort to collect the data, I find out that the executing time of Selenium is too long, this make the collecing data process become a challenge. So I came up with the solution that using another libraries to collect the data. And it was `CloudScraper`. In the next part, I will handle the collecting data process using `CloudScaper`\n",
     "\n",
-    "#### Collect data with CloudScraper:"
+    "### **Collect data with CloudScraper:**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, remake these above process:"
+    "Now, reperform above process using `CloudScapper`"
    ]
   },
   {
@@ -407,10 +410,10 @@
    "outputs": [],
    "source": [
     "page = '/p'\n",
-    "num_page = 2772\n",
+    "num_page = num_of_page\n",
     "for num_page in range(2, int(num_page) + 1):\n",
     "    content = scraper.get(url + page + str(num_page)).text\n",
-    "    soup = bs(content, 'html.parser')\n",
+    "    soup = BeautifulSoup(content, 'html.parser')\n",
     "    a_tags_list = soup.find_all('a', class_='js__product-link-for-product-id')\n",
     "    for a_tag in a_tags_list:\n",
     "        url_list.append('https://batdongsan.com.vn/' + a_tag.get('href'))"
@@ -422,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = 'real_estate.txt'\n",
+    "file_name = 'real_estate_for_sale_links.txt'\n",
     "\n",
     "with open(file_name, 'w') as file:\n",
     "    for line in url_list:\n",
@@ -520,8 +523,7 @@
     "urls = []\n",
     "with open('../Data/real_estate_for_sale_links.txt', 'r') as file:\n",
     "    for line in file.readlines():\n",
-    "            urls.append(line)\n",
-    "\n"
+    "            urls.append(line)"
    ]
   },
   {
@@ -1263,11 +1265,11 @@
     "                new_row = pd.Series(features, index = fields)\n",
     "                new_row_df = pd.DataFrame([new_row])\n",
     "                df = pd.concat([df, new_row_df], ignore_index = True)\n",
-    "                new_row_df.to_csv('../Data/real_estate_for_sale.csv', mode='a', header=False, index=False, encoding='utf-8')\n",
+    "                # new_row_df.to_csv('../Data/real_estate_for_sale.csv', mode='a', header=False, index=False, encoding='utf-8')\n",
     "        else:\n",
     "                # break;\n",
     "                \n",
-    "                print (\"haha\")\n",
+    "                print (\"error\")\n",
     "     "
    ]
   },
@@ -1275,7 +1277,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Store the collected data to csv file:"
+    "Up to now, we are successfully collect the data, with above 50.000 samples and tooks me about nearly about 12 hours for all of them. As you can see, I divided the collecting process by range to ensure and keep tract the result, Also I don't want put too much pressure on my computer too."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **4. Store the collected data to csv file:**\n",
+    "\n",
+    "Finally, just store the data into a `csv` file and finish the process."
    ]
   },
   {
@@ -1303,38 +1314,6 @@
    "outputs": [],
    "source": [
     "real_estate_df.shape()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('../Data/real_estate_for_sale.csv', index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(content.text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 02: Collect real estate for rent data:\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Finish collecting data"
    ]
   }
  ],
