--- a/Notebook/Phase02.Part01.Process_selling_data.ipynb
+++ b/Notebook/Phase02.Part01.Process_selling_data.ipynb
@@ -250,7 +250,7 @@
    "metadata": {},
    "source": [
     "- The data we used here is collected by crawling raw data from the website https://batdongsan.com.vn/        \n",
-    "- Each line is a record of a advertisement of real estate. So there isn't any line that has different meaning."
+    "- Each line is a record of a advertisement of real estate for sale. So there isn't any line that has different meaning."
    ]
   },
   {
@@ -446,7 +446,7 @@
    "metadata": {},
    "source": [
     "### **2.3 The meaning of each columns**\n",
-    "Let's see all the columns of the dataset."
+    "Let's see all the columns currently in the dataset."
    ]
   },
   {
@@ -489,7 +489,7 @@
     "- `Address`: address of the real estate. With the real estate is apartment, the address can also contain the Project of the real estate.\n",
     "- `Type` : the category of the real estate.\n",
     "- `Area`: the area of the real estate.\n",
-    "- `Price`: the price of the real estate. It can be the total price or just the price per m^2.\n",
+    "- `Price`: the price of the real estate. It can be the total price or just the price per m2.\n",
     "- `Bedroom`: number of bedroom in the real estate.\n",
     "- `Toilet`: number of toilet in the real estate.\n",
     "- `Floor`: number of floor.\n",
@@ -559,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After some overview about the dataset, Let's make some cleaning on it.\n",
+    "After some overview about the dataset, let's make some cleaning on it.\n",
     "### **2.4 Preprocessing for numeric columns:**"
    ]
   },
@@ -703,17 +703,25 @@
     "area_values = real_estate_for_sale_df[real_estate_for_sale_df['Area'].notna()]['Area'].to_list()\n",
     "unit_list = []\n",
     "\n",
+    "# Extract the unit of each area.\n",
     "for area in area_values:\n",
     "    unit_list.append(area.split(' ')[1])\n",
     "\n",
-    "set(unit_list)\n"
+    "set(unit_list)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So we can see that all the values in columns `Area` is in the `m²` unit. Now we have to change the datas into the right format, then convert them to `float`. Finally, rename the column for a clearly meaning."
+    "So we can see that all the values in columns `Area` is in the `m²` unit. Now we have to change the datas into the right format, then convert them to `float`. Finally, rename the column for a clearly meaning.\n",
+    "Look through the data in `Area` column, there just a unconsistent between the use of `,` and `.` in the values. The reason here is the `Price` is updated base on the data the was given by the users, so that lead to many diffrents format of value. Finally, I find out all the pattern here:\n",
+    "- 1,233.4\n",
+    "- 344.4\n",
+    "- 334,4\n",
+    "- 1.344\n",
+    "\n",
+    "For each pattern, we will treat it differently, let's see the function below:"
    ]
   },
   {
@@ -729,8 +737,11 @@
     "        return area\n",
     "    \n",
     "    area = area.split(' ')[0]\n",
+    "    # Handle 1,233.4 case, convert it into 1233.4\n",
     "    if (',' in area) and ('.' in area):\n",
     "        cleaned_area = area.replace('.', '').replace(',', '.')\n",
+    "\n",
+    "    # Case 334,4 -> 334.4\n",
     "    elif ',' in area:\n",
     "        \n",
     "        cleaned_area = area.replace(',', '.')\n",
@@ -738,6 +749,7 @@
     "        # print (area)\n",
     "        cleaned_area = area\n",
     "    \n",
+    "    # Case 1.344 -> 1344\n",
     "    if '.' in area:\n",
     "        count = len(area.split('.')[-1])\n",
     "        if count == 3:\n",
@@ -751,90 +763,6 @@
     "# Drop the area that is nan\n",
     "real_estate_for_sale_df = real_estate_for_sale_df[real_estate_for_sale_df['Area'].notna()]\n",
     "real_estate_for_sale_df.rename(columns={'Area': 'Area(m2)'}, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Address</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Area(m2)</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Bedroom</th>\n",
-       "      <th>Toilet</th>\n",
-       "      <th>Floor</th>\n",
-       "      <th>Furniture</th>\n",
-       "      <th>Direction</th>\n",
-       "      <th>Legal</th>\n",
-       "      <th>Posting date</th>\n",
-       "      <th>Expiry date</th>\n",
-       "      <th>Ad type</th>\n",
-       "      <th>Ad code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>27603</th>\n",
-       "      <td>The Everrich Infinity, 290, Đường An Dương Vươ...</td>\n",
-       "      <td>Căn hộ chung cư</td>\n",
-       "      <td>1030.0</td>\n",
-       "      <td>75 tỷ</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Sổ đỏ/ Sổ hồng</td>\n",
-       "      <td>23/11/2023</td>\n",
-       "      <td>08/12/2023</td>\n",
-       "      <td>Tin thường</td>\n",
-       "      <td>38497317</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 Address             Type  \\\n",
-       "27603  The Everrich Infinity, 290, Đường An Dương Vươ...  Căn hộ chung cư   \n",
-       "\n",
-       "       Area(m2)  Price Bedroom Toilet Floor Furniture Direction  \\\n",
-       "27603    1030.0  75 tỷ     NaN    NaN   NaN       NaN       NaN   \n",
-       "\n",
-       "                Legal Posting date Expiry date     Ad type   Ad code  \n",
-       "27603  Sổ đỏ/ Sổ hồng   23/11/2023  08/12/2023  Tin thường  38497317  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "real_estate_for_sale_df[(real_estate_for_sale_df['Type'] == 'Căn hộ chung cư') & (real_estate_for_sale_df['Area(m2)'] > 1000) ]"
    ]
   },
   {
@@ -918,26 +846,6 @@
     "real_estate_for_sale_df['Price'] = real_estate_for_sale_df.apply(lambda row: update_price(row['Price'], row['Area(m2)']), axis=1)\n",
     "\n",
     "real_estate_for_sale_df.rename(columns={'Price': 'Price(VNĐ)'}, inplace=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5715"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "real_estate_for_sale_df['Price(VNĐ)'].isna().sum()"
    ]
   },
   {
@@ -1029,15 +937,10 @@
    "metadata": {},
    "source": [
     "- With the `Address` column, there is some thing we can dicuss here:\n",
-    "    - The fully address is does not really meaningfull for my analysis. The base idea is that all the real estate is located in Ho Chi Minh City, so we can extract the district of the real estate.\n",
-    "    - In many real estates, the address also contain the project they belong to. So we could also extract the project for further analysis."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Extract the district of real estates:\n"
+    "    - The fully address is does not really meaningfull for my analysis. The base idea is that all the real estate is located in `Ho Chi Minh City`, so we can extract the district of the real estate.\n",
+    "    - In many real estates, the address also contain the project they belong to. So we could also extract the project for further analysis.\n",
+    "\n",
+    "##### **Extract the district of real estates:**"
    ]
   },
   {
@@ -1055,6 +958,7 @@
     "            split = address.split(' ')\n",
     "            district = split[-5] + \" \" + split[-4]\n",
     "        \n",
+    "        # Define some possible prefix for the district value\n",
     "        prefix_list = ['quận', 'huyện', 'thành phố', 'q.', 'TP.']\n",
     "        for prefix in prefix_list:\n",
     "            if district.lower().strip().startswith(prefix.lower()):\n",
@@ -1073,7 +977,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Update value of the column"
+    "Then, create a new column named `District` and store values into it. Also, we will eliminate all the real estate which we can extract `District` information."
    ]
   },
   {
@@ -1137,7 +1041,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Extract the project of real estates:"
+    "##### **Extract the project of real estates:**\n",
+    "This process is more simple, the `Project` is marked just by the keyword `Dự án` so we can easily detect them."
    ]
   },
   {
@@ -1150,7 +1055,7 @@
     "    if 'Dự án' in address:\n",
     "        return address.split(',')[0]\n",
     "    else:\n",
-    "        return 'Không'\n"
+    "        return 'Không'"
    ]
   },
   {
@@ -1183,12 +1088,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Just define some key word for each level of furniture\n",
     "deluxe_furniture_keywords = [\"cao cấp\", \"ntcc\", \"sang\", \"5 sao\", \"nhập khẩu\", \"hiện đại\", \"đạt chuẩn\"]\n",
     "fully_furniture_keywords = [\"đủ\", \"full\", \"tặng\", \"toàn bộ\", \"hoàn chỉnh\", \"hoàn thiện\", \"đẹp\", \"đã làm\", \"mới\"]\n",
     "basic_furniture_keywords = [\"cơ bản\", \"ít\", \"ntcb\", \"có\", \"ok\", \"dính tường\", \"căn bản\"]\n",
     "none_furniture_keywords = [\"thô\", \"trống\", \"không\", \"ko\"]\n",
     "\n",
-    "\n",
+    "# Funtion to normalize the data.\n",
     "def normalize_text(text):\n",
     "    if pd.isnull(text):\n",
     "        return \"Không có thông tin\"\n",
@@ -1527,10 +1433,7 @@
     "\n",
     "    outliers_mask = (cleaned_real_estate_df[column] < lower_threshold) | (cleaned_real_estate_df[column] > upper_threshold)\n",
     "\n",
-    "    cleaned_real_estate_df = cleaned_real_estate_df[~outliers_mask]\n",
-    "\n",
-    "\n",
-    "cleaned_real_estate_df['Price(VNĐ)'].isna().sum()"
+    "    cleaned_real_estate_df = cleaned_real_estate_df[~outliers_mask]\n"
    ]
   },
   {
