--- a/Notebook/Phase03.Part03.Asking_selling_questions.ipynb
+++ b/Notebook/Phase03.Part03.Asking_selling_questions.ipynb
@@ -20,9 +20,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import geopandas as gpd\n",
-    "import re\n",
-    "import json\n",
     "import plotly.express as px\n",
     "from plotly.subplots import make_subplots\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -186,263 +183,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Area(m2)</th>\n",
-       "      <th>Price(VNĐ)</th>\n",
-       "      <th>Bedroom(Phòng)</th>\n",
-       "      <th>Toilet(Phòng)</th>\n",
-       "      <th>Floor(Tầng)</th>\n",
-       "      <th>Furniture</th>\n",
-       "      <th>Legal</th>\n",
-       "      <th>Posting date</th>\n",
-       "      <th>District</th>\n",
-       "      <th>Project</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>7.000000e+09</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>2023-12-03</td>\n",
-       "      <td>Bình Tân</td>\n",
-       "      <td>Không</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>77.4</td>\n",
-       "      <td>3.980000e+09</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>Sổ đỏ và sổ hồng</td>\n",
-       "      <td>2023-12-02</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Không</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>122</th>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>3.200000e+09</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>Sổ đỏ và sổ hồng</td>\n",
-       "      <td>2023-12-06</td>\n",
-       "      <td>Bình Tân</td>\n",
-       "      <td>Không</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>139</th>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>Sổ đỏ và sổ hồng</td>\n",
-       "      <td>2023-12-05</td>\n",
-       "      <td>Bình Chánh</td>\n",
-       "      <td>Không</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>140</th>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>3.800000e+09</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>Sổ đỏ và sổ hồng</td>\n",
-       "      <td>2023-12-05</td>\n",
-       "      <td>Nhà Bè</td>\n",
-       "      <td>Không</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43769</th>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>1.000000e+09</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>2023-11-09</td>\n",
-       "      <td>Củ Chi</td>\n",
-       "      <td>Không</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43774</th>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>51.1</td>\n",
-       "      <td>3.450000e+09</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>Sổ đỏ</td>\n",
-       "      <td>2023-11-08</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Không</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43778</th>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>4.400000e+09</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>Sổ đỏ và sổ hồng</td>\n",
-       "      <td>2023-11-08</td>\n",
-       "      <td>Bình Tân</td>\n",
-       "      <td>Không</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43791</th>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>8.000000e+09</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>Sổ đỏ và sổ hồng</td>\n",
-       "      <td>2023-12-08</td>\n",
-       "      <td>Bình Tân</td>\n",
-       "      <td>Không</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43823</th>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>75.3</td>\n",
-       "      <td>3.800000e+09</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>Không có thông tin</td>\n",
-       "      <td>Sổ đỏ và sổ hồng</td>\n",
-       "      <td>2023-11-08</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Không</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4476 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Type  Area(m2)    Price(VNĐ)  Bedroom(Phòng)  Toilet(Phòng)  \\\n",
-       "15     Đất bán      80.0  7.000000e+09            -1.0           -1.0   \n",
-       "93     Đất bán      77.4  3.980000e+09            -1.0           -1.0   \n",
-       "122    Đất bán      50.0  3.200000e+09            -1.0           -1.0   \n",
-       "139    Đất bán      50.0           NaN            -1.0           -1.0   \n",
-       "140    Đất bán     120.0  3.800000e+09            -1.0           -1.0   \n",
-       "...        ...       ...           ...             ...            ...   \n",
-       "43769  Đất bán     134.0  1.000000e+09            -1.0           -1.0   \n",
-       "43774  Đất bán      51.1  3.450000e+09            -1.0           -1.0   \n",
-       "43778  Đất bán      87.0  4.400000e+09            -1.0           -1.0   \n",
-       "43791  Đất bán      92.0  8.000000e+09            -1.0           -1.0   \n",
-       "43823  Đất bán      75.3  3.800000e+09            -1.0           -1.0   \n",
-       "\n",
-       "       Floor(Tầng)           Furniture               Legal Posting date  \\\n",
-       "15            -1.0  Không có thông tin  Không có thông tin   2023-12-03   \n",
-       "93            -1.0  Không có thông tin    Sổ đỏ và sổ hồng   2023-12-02   \n",
-       "122           -1.0  Không có thông tin    Sổ đỏ và sổ hồng   2023-12-06   \n",
-       "139           -1.0  Không có thông tin    Sổ đỏ và sổ hồng   2023-12-05   \n",
-       "140           -1.0  Không có thông tin    Sổ đỏ và sổ hồng   2023-12-05   \n",
-       "...            ...                 ...                 ...          ...   \n",
-       "43769         -1.0  Không có thông tin  Không có thông tin   2023-11-09   \n",
-       "43774         -1.0  Không có thông tin               Sổ đỏ   2023-11-08   \n",
-       "43778         -1.0  Không có thông tin    Sổ đỏ và sổ hồng   2023-11-08   \n",
-       "43791         -1.0  Không có thông tin    Sổ đỏ và sổ hồng   2023-12-08   \n",
-       "43823         -1.0  Không có thông tin    Sổ đỏ và sổ hồng   2023-11-08   \n",
-       "\n",
-       "         District Project  \n",
-       "15       Bình Tân   Không  \n",
-       "93              7   Không  \n",
-       "122      Bình Tân   Không  \n",
-       "139    Bình Chánh   Không  \n",
-       "140        Nhà Bè   Không  \n",
-       "...           ...     ...  \n",
-       "43769      Củ Chi   Không  \n",
-       "43774          12   Không  \n",
-       "43778    Bình Tân   Không  \n",
-       "43791    Bình Tân   Không  \n",
-       "43823          12   Không  \n",
-       "\n",
-       "[4476 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "real_estate_for_sale_df[real_estate_for_sale_df['Type'] == 'Đất bán']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### **2.2 Question 01: How the numbers of real estate is distributed by the district in Ho Chi Minh City? Which district have the most real estate? Which type of real estate is the signature for each district?**\n",
-    "\n",
-    "- **Meaning of the question:** By answering this question, we will know which district in Ho Chi Minh City will contain many real estate. From that, like a buyer, we can choose the potential and the location of the real estate we want.\n",
+    "As a buyer, when we have need to find a real estate, we want to choose the best real esate that fit most with our requirement. But before that, we should know about the current status of real estate market for the district we intend to find. By answering this question, we will know get more knowledge about the current distribution of each real estate type across district.\n",
     "\n",
     "First, let's extract the column `Type` and `District` of dataframe."
    ]
@@ -1553,151 +1298,11 @@
    "outputs": [],
    "source": [
     "district_type_df = real_estate_for_sale_df[['Type', 'District']]\n",
+    "# Group by and find the count of each type in each district.\n",
     "district_type_df = district_type_df.groupby('District')['Type'].value_counts().reset_index(name = 'Count')\n",
     "\n",
     "district_type_df.loc[:, 'Percentage'] = (district_type_df.loc[:,'Count'] / district_type_df.groupby('District')['Count'].transform('sum'))*100\n",
     "district_type_df.loc[:, 'Percentage'] = district_type_df.loc[:, 'Percentage'].round(2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>District</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Count</th>\n",
-       "      <th>Percentage</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Nhà riêng</td>\n",
-       "      <td>571</td>\n",
-       "      <td>40.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Nhà mặt phố</td>\n",
-       "      <td>484</td>\n",
-       "      <td>33.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Căn hộ chung cư</td>\n",
-       "      <td>362</td>\n",
-       "      <td>25.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Nhà biệt thự, liền kề</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>122</th>\n",
-       "      <td>Tân Phú</td>\n",
-       "      <td>Căn hộ chung cư</td>\n",
-       "      <td>986</td>\n",
-       "      <td>38.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>Tân Phú</td>\n",
-       "      <td>Nhà riêng</td>\n",
-       "      <td>896</td>\n",
-       "      <td>34.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>Tân Phú</td>\n",
-       "      <td>Nhà mặt phố</td>\n",
-       "      <td>621</td>\n",
-       "      <td>24.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>Tân Phú</td>\n",
-       "      <td>Đất bán</td>\n",
-       "      <td>72</td>\n",
-       "      <td>2.78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>Tân Phú</td>\n",
-       "      <td>Nhà biệt thự, liền kề</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0.46</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>127 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    District                   Type  Count  Percentage\n",
-       "0          1              Nhà riêng    571       40.01\n",
-       "1          1            Nhà mặt phố    484       33.92\n",
-       "2          1        Căn hộ chung cư    362       25.37\n",
-       "3          1                Đất bán      6        0.42\n",
-       "4          1  Nhà biệt thự, liền kề      4        0.28\n",
-       "..       ...                    ...    ...         ...\n",
-       "122  Tân Phú        Căn hộ chung cư    986       38.11\n",
-       "123  Tân Phú              Nhà riêng    896       34.63\n",
-       "124  Tân Phú            Nhà mặt phố    621       24.00\n",
-       "125  Tân Phú                Đất bán     72        2.78\n",
-       "126  Tân Phú  Nhà biệt thự, liền kề     12        0.46\n",
-       "\n",
-       "[127 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "district_type_df"
    ]
   },
   {
@@ -4405,20 +4010,14 @@
     "            )\n",
     "\n",
     "fig.update_layout(\n",
-    "    width=1100,\n",
-    "    height=1500,\n",
+    "    width=1100, height=1500,\n",
     "    margin=dict(l=20, r=20, t=90, b=20),\n",
     "    paper_bgcolor='#ffe6cc',\n",
     "    title='<b>Percentage Distribution of Real Estate Types by District</b>',\n",
     "    title_font_size=25,\n",
     ")\n",
     "fig.update_traces(\n",
-    "    marker_line_color='black',\n",
-    "    marker_line_width=0.5,\n",
-    "    hovertemplate='<b>%{label}</b> has the percentage of <b>%{value}%</b>',\n",
-    "    textposition='inside', insidetextorientation='radial',\n",
-    ")\n",
-    "\n",
+    "    marker_line_color='black', marker_line_width=0.5, hovertemplate='<b>%{label}</b> has the percentage of <b>%{value}%</b>',textposition='inside', insidetextorientation='radial')\n",
     "\n",
     "fig.show()\n"
    ]
@@ -5576,16 +5175,12 @@
    "source": [
     "types = real_estate_for_sale_df['Type'].unique()\n",
     "\n",
+    "# Create a dictionary to store the data about all the district that have the current real estate type\n",
     "type_and_most_occur_district = {}\n",
     "\n",
     "for type in types:\n",
-    "    if type in ['Đất nền dự án', 'Nhà biệt thự, liền kề']:\n",
-    "         df = district_type_df[(district_type_df['Type'] == type ) & (district_type_df['Percentage'] >= 0)]\n",
-    "    elif type == 'Nhà mặt phố':\n",
-    "         df = district_type_df[(district_type_df['Type'] == type ) & (district_type_df['Percentage'] >= 0)]\n",
-    "    else:\n",
-    "        df = district_type_df[(district_type_df['Type'] == type ) & (district_type_df['Percentage'] >= 0)]\n",
-    "    type_and_most_occur_district[type] = df['District'].to_list()\n"
+    "     df = district_type_df[(district_type_df['Type'] == type ) & (district_type_df['Percentage'] >0)]\n",
+    "     type_and_most_occur_district[type] = df['District'].to_list()\n"
    ]
   },
   {
@@ -5631,7 +5226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Funtion to set the new range\n",
     "def map_price_range(price):\n",
     "    for label, (lower, upper) in price_bins.items():\n",
     "        if lower <= price < upper:\n",
@@ -5645,6 +5240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "for type, value  in type_and_district_dict.items():\n",
     "    modified_df = value.copy()\n",
     "\n",
@@ -13522,6 +13118,7 @@
     "columns_to_encode1 = ['Furniture', 'Legal']\n",
     "columns_to_encode2 = ['Legal']\n",
     "\n",
+    "# Set the other for each level of furniture and legal\n",
     "furniture_order = ['Không có thông tin', 'Khác', 'Không nội thất', 'Nội thất cơ bản', 'Nội thất đầy đủ', 'Nội thất sang trọng']\n",
     "legal_order = ['Không có thông tin', 'Khác', 'Đang chờ sổ', 'Hợp đồng mua bán', 'Sổ hồng', 'Sổ đỏ', 'Sổ đỏ và sổ hồng']\n",
     "\n",
@@ -13850,7 +13447,7 @@
     "**Overall:**\n",
     "- We can see that for all types of real eastate, there are a good correlation between the `Price` with `Area`, `Bedroom`, `Toilet`, `Floor` for just types that is not `Căn hộ chung cư`. Also, there is a low relationship with `Furniture` and `Legal`, show that these factor not affect so much to the `Price` of a real estate.\n",
     "\n",
-    "- For the `District`, the correlation of `Price` are also very diffrence between each district, and the"
+    "- For the `District`, the correlation of `Price` are also very diffrence between each district, for a overview trend, districts that have notable high price tend to have the higher correlation with the `Price`."
    ]
   }
  ],
