--- a/Notebook/Phase04.Part01.Build_selling_data_models.ipynb
+++ b/Notebook/Phase04.Part01.Build_selling_data_models.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Remove features that is not necessary for the model:\n",
+    "#### **Remove features that is not necessary for the model:**\n",
     "- We can see that, the column `Project` have many seperated values, also the `Posting date` column doesn't much meaning, so we will drop them."
    ]
   },
@@ -117,16 +117,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convert all the non-numeric columns into numeric columns:\n",
-    "Now, we will convert all the columns in dataframe in to numerical data types\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Normalize the value \n",
-    "For this normalize, we use `One hot encoding`"
+    "#### **Convert all the non-numeric columns into numeric columns:**\n",
+    "With the columnn `District`, the data is in nominal data type, so one possible way to converr this column into numeric column is using `One hot encoding` method"
    ]
   },
   {
@@ -215,6 +207,8 @@
     "\n",
     "X = processed_apartment_df.drop(columns=['Price (Million)'])\n",
     "y = processed_apartment_df['Price (Million)']\n",
+    "\n",
+    "# Split the data into train set and test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
@@ -222,7 +216,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we will use `K Fold Cross Validation` to find the best model for our data."
+    "Now, let's consider some models that we could use here. After some research, I can findout some model below may be suitable for our regression problem\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare models\n",
+    "model_linear = LinearRegression()\n",
+    "model_ridge = Ridge()\n",
+    "model_lasso = Lasso()\n",
+    "model_elastic_net = ElasticNet()\n",
+    "model_dtree = DecisionTreeRegressor()\n",
+    "model_rforest = RandomForestRegressor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But among them, which is the best one? To find that, we have to do a validation step to find out which one will do the best for out data. In this case, we will use `K Fold Cross Validation` to find the best model for our data. We can easily see this is a good method because it can make sure that all the values can be trained and test, from that, the accurancy and the performance of the model can be validate in the best way."
    ]
   },
   {
@@ -233,14 +249,6 @@
    "source": [
     "# Define score matrix\n",
     "scoring_metrics = ['neg_mean_squared_error', 'neg_mean_absolute_error', 'r2']\n",
-    "\n",
-    "# Prepare models\n",
-    "model_linear = LinearRegression()\n",
-    "model_ridge = Ridge()\n",
-    "model_lasso = Lasso()\n",
-    "model_elastic_net = ElasticNet()\n",
-    "model_dtree = DecisionTreeRegressor()\n",
-    "model_rforest = RandomForestRegressor()\n",
     "\n",
     "# Compare models\n",
     "model_linear_score = cross_validate(model_linear, X, y, cv = 7, scoring = scoring_metrics)\n",
@@ -382,15 +390,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Among model, we can see that `Random Forest` give me the best `R2 score` with over 0.7, but also take the most time (upto 2 seconds to train and 0.032 seconds to test).\n",
-    "Because of all model have the score nearly the same, so we will use all of them to buil the model."
+    "- Among model, we can see that `Random Forest` give me the best `R2 score` with over 0.7, but also take the most time (upto 2 seconds to train and 0.032 seconds to test).\n",
+    "\n",
+    "- All the error of `Elastic net model` are higher than the overall, seems that this will be this worst performance among all the model\n",
+    "\n",
+    "- But in a broader view, also for my crucious, I think we will use all of them to build the model."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before that, we want to tune and getthe best hyperparameter for each model. For this purpose, we will use `GridSearchCV` to do this task\n",
+    "Before that, we want to tune and get the best hyperparameter for each model. For this purpose, we will use `GridSearchCV` to do this task\n",
     "Let's make some define for the model."
    ]
   },
@@ -422,7 +433,7 @@
     "                                  'max_depth': [None, 5, 10, 15],\n",
     "                                  'min_samples_split': [2, 5, 10],\n",
     "                                  'min_samples_leaf': [1, 2, 4]}\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -1191,9 +1202,11 @@
    "metadata": {},
    "source": [
     "**Overall:**\n",
-    "- With `Multiple Linear Regression`, `Ridge`, `Lasso`, `ElasticNet`, the train and test result are nearly the same (in around 0.65), also the `MAE`, `MSE` doesn't change alot between the train set and test set.\n",
+    "- With `Multiple Linear Regression`, `Ridge`, `Lasso`, `ElasticNet`, the train and test result are nearly the same (in around 0.65), also the `MAE`, `MSE` doesn't change alot between the train set and test set. Here, we can easily see the trend of the data the was predicted, which tend to become higher in the lower price range, and with the higher range, the precited value become just more lower thant the actual one.\n",
+    "\n",
     "- About `Decision Tree` and `Random Forest`, the result is quite good in the train set (upto 0.83 and 0.86), but in the test set, the result just in 0.74 and 0.77, also. the `MAE` and `MSE` raise a lot (nearly double for `MSE` of `Random Forest`), so we can consider there might be overfifting here.\n",
-    "- By the plot, we can see that all models doesn't work for price that is so high (over 25000). In this range of Price, the difference between actual prices and predicted prices can be easily observe."
+    "\n",
+    "- By the plot, we can see that all models doesn't work for price that is so high (over 25000). In this range of Price, the difference between actual prices and predicted prices can be easily observed."
    ]
   },
   {
@@ -1211,7 +1224,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "train = data_to_predict_df.drop(columns=['Price(VNĐ)'])\n"
+    "train = data_to_predict_df.drop(columns=['Price(VNĐ)'])"
    ]
   },
   {
